Initial commit: FrameTrain v1.0.0 with BSL 1.1 license
- Complete platform structure (website, desktop-app, CLI)
- Business Source License 1.1
- GitHub username: KarolP-tech
- Security: .env.local and build files excluded

--- a/website/.env.example
+++ b/website/.env.example
@@ -5,9 +5,9 @@ DATABASE_URL="postgresql://user:password@localhost:5432/frametrain"
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 
 # Stripe
-STRIPE_SECRET_KEY="sk_test_..."
-STRIPE_PUBLISHABLE_KEY="pk_test_..."
-STRIPE_WEBHOOK_SECRET="whsec_..."
+STRIPE_SECRET_KEY="sk_test_XXXXXXXX..."
+STRIPE_PUBLISHABLE_KEY="pk_test_XXXXXXXX..."
+STRIPE_WEBHOOK_SECRET="whsec_XXXXXXXX..."
 
 # App
 NEXT_PUBLIC_APP_URL="http://localhost:5001"
