--- a/website/.env.local.example
+++ b/website/.env.local.example
@@ -14,7 +14,7 @@ API_URL="http://localhost:5001"
 NEXT_PUBLIC_API_URL="http://localhost:5001"
 
 # GitHub Releases Configuration
-GITHUB_OWNER="YourUsername"
+GITHUB_OWNER="KarolP-tech"
 GITHUB_REPO="FrameTrain"
 GITHUB_TOKEN=""  # Optional: nur für private repositories nötig
 
