Update .env.local.example with correct DATABASE_URL format

--- a/website/.env.local.example
+++ b/website/.env.local.example
@@ -1,22 +1,48 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/frametrain"
+# FrameTrain Environment Configuration
+# Copy this file to .env.local and fill in your actual values
 
-# JWT Secret (generiere einen starken, zufälligen String)
+# ============================================
+# DATABASE
+# ============================================
+# For local development: Use your Supabase PostgreSQL connection string
+# Get it from: https://supabase.com → Project Settings → Database → Connection String
+DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.xxx.supabase.co:5432/postgres"
+
+# ============================================
+# JWT SECRET (Authentication)
+# ============================================
+# Generate with: openssl rand -base64 32
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 
-# Stripe (Payment)
+# ============================================
+# STRIPE (Payment)
+# ============================================
+# Get these from: https://dashboard.stripe.com/test/apikeys
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_PUBLISHABLE_KEY="pk_test_..."
 STRIPE_WEBHOOK_SECRET="whsec_..."
+STRIPE_PRICE_ID="price_..."
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_..."
 
-# API Configuration
+# ============================================
+# API CONFIGURATION
+# ============================================
 API_URL="http://localhost:5001"
 NEXT_PUBLIC_API_URL="http://localhost:5001"
 
-# GitHub Releases Configuration
+# ============================================
+# APP DOWNLOAD
+# ============================================
+APP_DOWNLOAD_BASE_URL="https://github.com/KarolP-tech/FrameTrain/releases/latest/download"
+
+# ============================================
+# GITHUB
+# ============================================
 GITHUB_OWNER="KarolP-tech"
 GITHUB_REPO="FrameTrain"
-GITHUB_TOKEN=""  # Optional: nur für private repositories nötig
+GITHUB_TOKEN=""  # Optional: only needed for private repositories
 
-# Environment
+# ============================================
+# ENVIRONMENT
+# ============================================
 NODE_ENV="development"
