--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -12,12 +12,14 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@tauri-apps/api": "^2.0.0",
     "recharts": "^2.12.0",
-    "lucide-react": "^0.263.1",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
@@ -25,10 +27,10 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "typescript": "^5.4.0",
-    "vite": "^5.2.0",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.0",
+    "vite": "^5.2.0"
   }
 }
