--- a/desktop-app/src-tauri/Cargo.toml
+++ b/desktop-app/src-tauri/Cargo.toml
@@ -3,21 +3,29 @@ name = "frametrain"
 version = "1.0.0"
 description = "FrameTrain Desktop App"
 authors = ["FrameTrain Team"]
-license = ""
-repository = ""
 edition = "2021"
 
+# Tauri 2 build script
 [build-dependencies]
-tauri-build = { version = "2.9", features = [] }
+tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.9", features = ["shell-open"] }
+# Tauri Core
+tauri = { version = "2.9.3", features = [] }
+
+# Plugins (werden in main.rs benutzt)
+tauri-plugin-os = "2.0"
+tauri-plugin-shell = "2.0"
+tauri-plugin-fs = "2.0"
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+# Datenbank + Tools
 rusqlite = { version = "0.30", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.6", features = ["v4", "serde"] }
 
 [features]
-default = ["custom-protocol"]
-custom-protocol = ["tauri/custom-protocol"]
+default = []
