--- a/desktop-app/src-tauri/Cargo.toml
+++ b/desktop-app/src-tauri/Cargo.toml
@@ -27,5 +27,13 @@ rusqlite = { version = "0.30", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.6", features = ["v4", "serde"] }
 
+# HTTP Client für Supabase
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
+
+# Password Hashing
+bcrypt = "0.15"
+
 [features]
 default = []
