Desktop App big Update: Login, Training, Dataset

--- a/desktop-app/.env.example
+++ b/desktop-app/.env.example
@@ -3,4 +3,4 @@
 
 # Supabase Database Connection (Transaction Pooler)
 # Get from: https://supabase.com → Project Settings → Database → Connection Pooling
-SUPABASE_URL="postgresql://postgres.pmilxbuzfghbphjjaiar:YOUR_PASSWORD_HERE@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+SUPABASE_URL="postgresql://postgres.pmilxbuzfghbphjjaiar:gD7eT4iP9%24%5E@aws-0-eu-central-1.pooler.supabase.com:6543/postgres"
