--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,17 +46,17 @@ jobs:
           sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
       
       - name: Install Python dependencies
-        working-directory: ./desktop-app/ml_backend
+        working-directory: ./desktop-app2/ml_backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
       - name: Install Node dependencies
-        working-directory: ./desktop-app
+        working-directory: ./desktop-app2
         run: npm ci
       
       - name: Build Tauri app
-        working-directory: ./desktop-app
+        working-directory: ./desktop-app2
         run: npm run tauri:build
       
       - name: Upload artifacts (Linux)
