--- a/website/.env.local.example
+++ b/website/.env.local.example
@@ -36,11 +36,15 @@ NEXT_PUBLIC_API_URL="http://localhost:5001"
 APP_DOWNLOAD_BASE_URL="https://github.com/KarolP-tech/FrameTrain/releases/latest/download"
 
 # ============================================
-# GITHUB
+# GITHUB (for Desktop App Downloads)
 # ============================================
-GITHUB_OWNER="KarolP-tech"
+# Your GitHub username/organization
+GITHUB_OWNER="FrameTrain"
+# Your repository name
 GITHUB_REPO="FrameTrain"
-GITHUB_TOKEN=""  # Optional: only needed for private repositories
+# Optional: Personal Access Token (only for private repos)
+# Leave empty for public repositories
+GITHUB_TOKEN=""
 
 # ============================================
 # ENVIRONMENT
