--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -34,15 +34,15 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: Install frontend dependencies
-        working-directory: ./desktop-app
+        working-directory: ./desktop-app2
         run: npm ci
 
       - name: Build frontend
-        working-directory: ./desktop-app
+        working-directory: ./desktop-app2
         run: npm run build
 
       - name: Build Tauri app
-        working-directory: ./desktop-app
+        working-directory: ./desktop-app2
         run: npm run tauri:build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
