--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -93,11 +93,13 @@ jobs:
       matrix:
         include:
           - platform: 'macos-latest'
-            args: '--target universal-apple-darwin'
-            rust_target: 'universal-apple-darwin'
+            args: ''
+            rust_target: 'aarch64-apple-darwin'
+
           - platform: 'ubuntu-22.04'
             args: ''
             rust_target: 'x86_64-unknown-linux-gnu'
+
           - platform: 'windows-latest'
             args: ''
             rust_target: 'x86_64-pc-windows-msvc'
