--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -134,6 +134,8 @@ jobs:
         run: npm run tauri:build -- ${{ matrix.args }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PASSWORD }}
       
       - name: List all files in target directory (Debug)
         run: |
@@ -149,6 +151,18 @@ jobs:
           files: |
             ./desktop-app2/src-tauri/target/**/release/bundle/dmg/*.dmg
             ./desktop-app2/src-tauri/target/**/release/bundle/macos/*.app.tar.gz
+            ./desktop-app2/src-tauri/target/**/release/bundle/macos/*.app.tar.gz.sig
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Upload latest.json for Updater (macOS)
+        if: matrix.platform == 'macos-latest'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ needs.create-release.outputs.version }}
+          files: |
+            ./desktop-app2/src-tauri/target/**/release/latest.json
+            ./desktop-app2/src-tauri/target/**/release/latest.json.sig
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
@@ -160,6 +174,8 @@ jobs:
           files: |
             ./desktop-app2/src-tauri/target/**/release/bundle/msi/*.msi
             ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.exe
+            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.nsis.zip
+            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.nsis.zip.sig
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
@@ -170,6 +186,8 @@ jobs:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
             ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage
+            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage.tar.gz
+            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage.tar.gz.sig
             ./desktop-app2/src-tauri/target/**/release/bundle/deb/*.deb
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
