--- a/desktop-app2/package.json
+++ b/desktop-app2/package.json
@@ -15,6 +15,8 @@
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
+    "@tauri-apps/plugin-updater": "^2.0.0",
+    "@tauri-apps/plugin-process": "^2.0.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.263.1",
     "react": "^18.3.0",
