--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -6,8 +6,8 @@ permissions:
 on:
   push:
     tags:
-      - 'v*.*.*' # Triggered by tags like v1.0.0
-  workflow_dispatch: # Manual trigger
+      - 'v*.*.*'
+  workflow_dispatch:
     inputs:
       version:
         description: 'Release version (e.g., 1.0.0)'
@@ -134,6 +134,8 @@ jobs:
         run: npm run tauri:build -- ${{ matrix.args }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
       
       - name: List all files in target directory (Debug)
         run: |
