--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -140,7 +140,9 @@ jobs:
       - name: List all files in target directory (Debug)
         run: |
           echo "=== Listing all bundle files ==="
-          ls -R ./desktop-app2/src-tauri/target/ || true
+          if [ -d "./desktop-app2/src-tauri/target/" ]; then
+            find ./desktop-app2/src-tauri/target/ -type f -name "*.dmg" -o -name "*.msi" -o -name "*.exe" -o -name "*.AppImage" -o -name "*.deb" -o -name "*.json" -o -name "*.tar.gz" -o -name "*.zip" || true
+          fi
         shell: bash
       
       - name: Upload Release Assets (macOS)
@@ -149,17 +151,12 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/**/release/bundle/dmg/*.dmg
-            ./desktop-app2/src-tauri/target/**/release/bundle/macos/*.app.tar.gz
-            ./desktop-app2/src-tauri/target/**/release/bundle/macos/*.json
+            ./desktop-app2/src-tauri/target/aarch64-apple-darwin/release/bundle/dmg/*.dmg
+            ./desktop-app2/src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.app.tar.gz
+            ./desktop-app2/src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.json
+          fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Upload latest.json for Updater (macOS)
-        if: matrix.platform == 'macos-latest'
-        run: |
-          echo "Updater artifacts are now included in the macOS release assets above"
-          echo "No separate upload needed"
       
       - name: Upload Release Assets (Windows)
         if: matrix.platform == 'windows-latest'
@@ -167,10 +164,11 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/**/release/bundle/msi/*.msi
-            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.exe
-            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.nsis.zip
-            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.json
+            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/msi/*.msi
+            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*.exe
+            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*.nsis.zip
+            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*.json
+          fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
@@ -180,19 +178,60 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage
-            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage.tar.gz
-            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.json
-            ./desktop-app2/src-tauri/target/**/release/bundle/deb/*.deb
+            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.AppImage
+            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.AppImage.tar.gz
+            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.json
+            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/deb/*.deb
+          fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  notify-release:
+  generate-updater-json:
     needs: [create-release, build-tauri]
     runs-on: ubuntu-latest
     
     steps:
-      - name: Notify Success
+      - name: Generate latest.json
         run: |
-          echo "✅ Release v${{ needs.create-release.outputs.version }} created successfully!"
-          echo "🔗 Release URL: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.create-release.outputs.version }}"
+          echo "Generating latest.json..."
+          mkdir -p release-temp
+          cat <<EOF > release-temp/latest.json
+{
+  "version": "${{ needs.create-release.outputs.version }}",
+  "notes": "Auto-generated release notes for v${{ needs.create-release.outputs.version }}",
+  "pub_date": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
+  "platforms": {
+    "darwin-aarch64": {
+      "signature": "",
+      "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_aarch64.dmg"
+    },
+    "windows-x86_64": {
+      "signature": "",
+      "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_x64-setup.exe"
+    },
+    "linux-x86_64": {
+      "signature": "",
+      "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_amd64.AppImage"
+    }
+  }
+}
+EOF
+
+- name: Upload latest.json
+uses: softprops/action-gh-release@v2
+with:
+  tag_name: v${{ needs.create-release.outputs.version }}
+  files: release-temp/latest.json
+  fail_on_unmatched_files: false
+env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+notify-release:
+  needs: [create-release, build-tauri, generate-updater-json]
+  runs-on: ubuntu-latest
+  
+  steps:
+    - name: Notify Success
+      run: |
+        echo "✅ Release v${{ needs.create-release.outputs.version }} created successfully!"
+        echo "🔗 Release URL: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.create-release.outputs.version }}"
