--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -140,9 +140,7 @@ jobs:
       - name: List all files in target directory (Debug)
         run: |
           echo "=== Listing all bundle files ==="
-          if [ -d "./desktop-app2/src-tauri/target/" ]; then
-            find ./desktop-app2/src-tauri/target/ -type f -name "*.dmg" -o -name "*.msi" -o -name "*.exe" -o -name "*.AppImage" -o -name "*.deb" -o -name "*.json" -o -name "*.tar.gz" -o -name "*.zip" || true
-          fi
+          ls -R ./desktop-app2/src-tauri/target/ || true
         shell: bash
       
       - name: Upload Release Assets (macOS)
@@ -151,9 +149,9 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/aarch64-apple-darwin/release/bundle/dmg/*.dmg
-            ./desktop-app2/src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.app.tar.gz
-            ./desktop-app2/src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.json
+            ./desktop-app2/src-tauri/target/**/release/bundle/dmg/*.dmg
+            ./desktop-app2/src-tauri/target/**/release/bundle/macos/*.app.tar.gz
+            ./desktop-app2/src-tauri/target/**/release/bundle/macos/*.json
           fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -164,10 +162,10 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/msi/*.msi
-            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*.exe
-            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*.nsis.zip
-            ./desktop-app2/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*.json
+            ./desktop-app2/src-tauri/target/**/release/bundle/msi/*.msi
+            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.exe
+            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.nsis.zip
+            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.json
           fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -178,10 +176,10 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.AppImage
-            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.AppImage.tar.gz
-            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.json
-            ./desktop-app2/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/deb/*.deb
+            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage
+            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage.tar.gz
+            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.json
+            ./desktop-app2/src-tauri/target/**/release/bundle/deb/*.deb
           fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
