fix: Correct latest.json URLs for updater + Release v1.0.11
🔧 Updater Fix:
- Change URLs to use update packages instead of installers
- macOS: .dmg → .app.tar.gz
- Windows: -setup.exe → -setup.nsis.zip
- Linux: .AppImage → .AppImage.tar.gz
- Add 'v' prefix to version in latest.json

📦 Version 1.0.11:
- Updated all version numbers to 1.0.11
- Ready to test auto-update from 1.0.10 → 1.0.11

--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -195,21 +195,21 @@ jobs:
           mkdir -p release-temp
           cat <<EOF > release-temp/latest.json
           {
-            "version": "${{ needs.create-release.outputs.version }}",
+            "version": "v${{ needs.create-release.outputs.version }}",
             "notes": "Auto-generated release notes for v${{ needs.create-release.outputs.version }}",
             "pub_date": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
             "platforms": {
               "darwin-aarch64": {
                 "signature": "",
-                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_aarch64.dmg"
+                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2.app.tar.gz"
               },
               "windows-x86_64": {
                 "signature": "",
-                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_x64-setup.exe"
+                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_x64-setup.nsis.zip"
               },
               "linux-x86_64": {
                 "signature": "",
-                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_amd64.AppImage"
+                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_amd64.AppImage.tar.gz"
               }
             }
           }
