fix: v1.0.20 - Critical updater version format fix
🐛 Bug Fix:
- Fixed latest.json version format: removed 'v' prefix
- Tauri updater expects version without 'v' (e.g., '1.0.20' not 'v1.0.20')
- This was causing check() to return null despite updates being available

📝 Changes:
- .github/workflows/release-desktop-app.yml: Version without 'v' prefix
- desktop-app2/src-tauri/tauri.conf.json: Version bump to 1.0.20
- desktop-app2/package.json: Version bump to 1.0.20

✅ Result:
- latest.json will now have: "version": "1.0.20" (correct format)
- Update detection from 1.0.19 → 1.0.20 will now work
- App should properly detect and offer updates

🧪 Testing:
- Version 1.0.19 → 1.0.20 update should be detected
- Expected logs: 'Check result: {version: 1.0.20, ...}'
- Instead of: 'Check result: null'

--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -280,7 +280,7 @@ jobs:
           mkdir -p release-temp
           cat <<EOF > release-temp/latest.json
           {
-            "version": "v${{ needs.create-release.outputs.version }}",
+            "version": "${{ needs.create-release.outputs.version }}",
             "notes": "Auto-generated release notes for v${{ needs.create-release.outputs.version }}",
             "pub_date": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
             "platforms": {
