--- a/website/package.json
+++ b/website/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
-    "next": "^14.2.0",
+    "next": "14.2.35",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "stripe": "^15.0.0",
